# zt-monitoring

./: .flake8  .gitignore  Containerfile  Makefile  README.md  api.py  entrypoint.sh  main.yml  monitoring.py  podman-compose.test.yaml  podman-compose.yaml  pyproject.toml  requirements.txt
.compose/openssh/: Containerfile
.github/: dependabot.yml
.github/workflows/: ci.yaml  image-publish.yaml  release.yaml
tests/: README.md  conftest.py
tests/e2e/: conftest.py
tests/integration/: conftest.py  test_integration.py
tests/unit/: conftest.py  test_api.py  test_monitoring.py
